NetBSD Problem Report #58188

From gson@gson.org  Tue Apr 23 17:25:50 2024
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F35BF1A9238
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 23 Apr 2024 17:25:49 +0000 (UTC)
Message-Id: <20240423172540.42515253F04@guava.gson.org>
Date: Tue, 23 Apr 2024 20:25:40 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: sysinst fails to display status of base32 set
X-Send-Pr-Version: 3.95

>Number:         58188
>Category:       install
>Synopsis:       sysinst fails to display status of base32 set
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Apr 23 17:30:01 +0000 2024
>Closed-Date:    Sat May 04 19:08:40 +0000 2024
>Last-Modified:  Sat May 04 19:45:01 +0000 2024
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current as of today
>Organization:
>Environment:
System: NetBSD
Architecture: x86_64
Machine: amd64
>Description:

The set selection menu in sysinst now looks something like this:

 a: Kernel (GENERIC)               Yes  
 b: Kernel (GENERIC_KASLR)         No   
 c: Kernel modules                 Yes  
 d: Base                           Yes  
 e: Base 32-bit compatibility libraries 
 f: Configuration files (/etc)     Yes  
 g: Compiler tools                 No   
 h: Games                          No   
 i: Graphics driver firmware       Yes  
 j: Manual pages                   No   
 k: Manual pages (HTML)            No   
 l: Miscellaneous                  No   
 m: Recovery tools                 No   
 n: Test programs                  No   
 o: Text processing tools          No   
 p: X11 sets                       None 
 q: Source and debug sets          None 

Note how the line for "e: Base 32-bit compatibility libraries" is
missing the Yes/No/None to indicate whether the set is selected or
not.

This is hampering my attempts to add support for the base32 set to
anita, and will surely cause confusion for human users, too.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58188 CVS commit: src/usr.sbin/sysinst
Date: Thu, 25 Apr 2024 11:25:09 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Thu Apr 25 11:25:09 UTC 2024

 Modified Files:
 	src/usr.sbin/sysinst: msg.mi.de msg.mi.en msg.mi.es msg.mi.pl util.c

 Log Message:
 Increase length of set description to 40 characters so recent additions fit.

 Ok: martin@

 Fixes PR install/58188 "sysinst fails to display status of base32 set"


 To generate a diff of this commit:
 cvs rdiff -u -r1.47 -r1.48 src/usr.sbin/sysinst/msg.mi.de
 cvs rdiff -u -r1.50 -r1.51 src/usr.sbin/sysinst/msg.mi.en
 cvs rdiff -u -r1.42 -r1.43 src/usr.sbin/sysinst/msg.mi.es
 cvs rdiff -u -r1.48 -r1.49 src/usr.sbin/sysinst/msg.mi.pl
 cvs rdiff -u -r1.76 -r1.77 src/usr.sbin/sysinst/util.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Sat, 04 May 2024 15:43:01 +0000
State-Changed-Why:
Is hannken's change adequate to addres the problem?
Is this what's holding up the sparc64 releng tests?


From: "J. Hannken-Illjes" <hannken@mailbox.org>
To: NetBSD GNATS <gnats-bugs@netbsd.org>
Cc: "riastradh@netbsd.org" <riastradh@NetBSD.org>
Subject: Re: install/58188 (sysinst fails to display status of base32 set)
Date: Sat, 4 May 2024 18:15:54 +0200

 > On 4. May 2024, at 17:43, riastradh@netbsd.org <riastradh@NetBSD.org> =
 wrote:
 >=20
 > Synopsis: sysinst fails to display status of base32 set
 >=20
 > State-Changed-From-To: open->feedback
 > State-Changed-By: riastradh@NetBSD.org
 > State-Changed-When: Sat, 04 May 2024 15:43:01 +0000
 > State-Changed-Why:
 > Is hannken's change adequate to addres the problem?
 > Is this what's holding up the sparc64 releng tests?

 Looks like Rev 1.33 of src/distrib/sparc64/cdroms/installcd/Makefile
 removed the "tests" set from the cdrom ...

 --
 J. Hannken-Illjes - hannken@mailbox.org

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: install/58188 (sysinst fails to display status of base32 set)
Date: Sat, 4 May 2024 18:31:07 +0200

 Can anita use the DVD instead?
 That is: NetBSD-10.99.10-sparc64-dvd.iso instead of NetBSD-10.99.10-sparc64.iso

 Martin

From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@netbsd.org
Cc: riastradh@NetBSD.org
Subject: Re: install/58188 (sysinst fails to display status of base32 set)
Date: Sat, 4 May 2024 21:03:47 +0300

 riastradh@NetBSD.org wrote:
 > Is hannken's change adequate to addres the problem?

 Yes.  This PR can be closed.

 > Is this what's holding up the sparc64 releng tests?

 No.  I was not aware of the sparc64 breakage, and it appears to be unrelated.
 -- 
 Andreas Gustafsson, gson@gson.org

State-Changed-From-To: feedback->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Sat, 04 May 2024 19:08:40 +0000
State-Changed-Why:
fixed, sparc64 tests broken by something else now


From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@netbsd.org
Cc: riastradh@NetBSD.org
Subject: Re: install/58188 (sysinst fails to display status of base32 set)
Date: Sat, 4 May 2024 21:26:49 +0300

 > Is this what's holding up the sparc64 releng tests?

 This is outside the scope of the present PR, but just in case your're
 curious, the issue with sparc64 appears to be that bracket is looking
 for an install ISO but is now finding two of them.
 -- 
 Andreas Gustafsson, gson@gson.org

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.